# mcp-embedded-ui-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-ignore
.github/workflows/: ci.yml
examples/: fastapi_demo.py
src/mcp_embedded_ui/: __init__.py  explorer.html  html.py  server.py
tests/: test_server.py
