[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-embedded-ui"
version = "0.3.1"
description = "A lightweight, minimal-dependency embedded Web UI for any MCP Server."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "aiperceivable", email = "team@aiperceivable.com" },
]
keywords = ["mcp", "ui", "explorer", "tools", "model-context-protocol", "asgi", "starlette", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "starlette>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx",
    "ruff>=0.1",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://aiperceivable.github.io/mcp-embedded-ui/"
Documentation = "https://github.com/aiperceivable/mcp-embedded-ui"
Repository = "https://github.com/aiperceivable/mcp-embedded-ui-python"
Issues = "https://github.com/aiperceivable/mcp-embedded-ui-python/issues"
Changelog = "https://github.com/aiperceivable/mcp-embedded-ui-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_embedded_ui"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_embedded_ui/explorer.html" = "mcp_embedded_ui/explorer.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["src/mcp_embedded_ui"]

[tool.coverage.report]
fail_under = 90
show_missing = true

